<resources>
    <string name="app_name">CB</string>
    <string name="n">email/senha</string>
    <string name="email">Email</string>
    <string name="cep">CEP</string>
    <string name="CNPJ">CNPJ</string>
    <string name="senha">********</string>
    <string name="endereco">endereço</string>
    <string name="cidade">cidade</string>
    <string name="c">Cadastrar como?</string>
    <string name="cpf">CPF</string>

    <string name="logo_name_Lilas">dev Flayy</string>
    <string name="logo_name_House">HOUSE</string>
    <string name="TextView_Cadastrar">Cadastrar Conta</string>
    <string name="TextView_EsqueciSenha">Esqueci a senha</string>
    <string name="TextView_RedefinirSenha">Redefinir senha</string>
    <string name="TextView_InsiraEmail">Insira o email da sua conta</string>
    <string name="TextView_InsiraNome">Insira seu nome</string>
    <string name="TextView_InsiraSenha">Insira a senha da sua conta</string>
    <string name="TextView_ConfirmeSenha">Confirme sua senha</string>
    <string name="Button_Entrar">Entrar</string>
    <string name="p">R$__,__</string>
    <string name="nome">Nome</string>
    <string name="Button_EnviarEmail">Enviar Email de redefinição de senha</string>
    <string name="Button_CadastrarConta">Cadastrar</string>
    <string name="cadastrar_servi_o">Serviço</string>
    <string name="ver_pedidos">pedidos</string>
    <string name="seja_bem_vindo">Seja bem vindo!</string>
    <string name="ver_servi_os"> serviços</string>
    <string name="pesquisar_servi_os">Pesquisar serviços</string>
    <string name="ver_meus_servi_os"> meus serviços</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="confirmar_nova_senha">Confirmar nova senha</string>
    <string name="digite_a_nova_senha">Digite a nova senha</string>
    <string name="enviar">Enviar</string>
    <string name="editar_perfil"> perfil</string>
    <string name="admin">Admin</string>
    <string name="name">Name</string>
    <string name="name1">Name</string>
    <string name="titulo">Nome do projeto</string>
    <string name="descricao">Descricao</string>
    <string name="preco">Preco</string>
    <string name="Praso">Praso</string>
    <string name="data">__/__/____.</string>
    <string name="s">serviso</string>
    <string name="Historico">historico</string>
    <string name="atual">serviço atual</string>
    <string name="ser">Serviço</string>
    <string name="cotribu">dev</string>
</resources>