<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".cadastrar_us">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="372dp"
        android:layout_height="645dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nome:"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/TXT_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n"


            android:textSize="30dp"

            android:background="#FFC107"
            />



        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:textSize="30dp"
            android:background="#FFC107"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CNPJ:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:ems="10"
            android:textSize="30dp"
            android:hint="@string/CNPJ"
            android:inputType="textMultiLine"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CEP:"

            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFC107"
            android:textSize="30dp"
            android:hint="@string/cep"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cidade:"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFC107"
            android:textSize="30dp"
            android:hint="@string/cidade"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Emdereço:"

            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFC107"
            android:textSize="30dp"
            android:hint="@string/endereco"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Senha:"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFC107"
            android:textSize="30dp"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confimar Senha:"

            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFC107"
            android:textSize="30dp"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#FFEB3B"
            android:shadowColor="#000000"
            android:text="Cadastrar:"
            android:textColor="#000000"
            android:textSize="24sp"
            app:rippleColor="#000000"
            app:strokeColor="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Voltar"
        android:layout_width="74dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFC107"
        android:drawableTop="@drawable/baseline_arrow_back_ios_new_24"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>