<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".Criar_servico">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/cadastrar_servi_o"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/nome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/descricao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.364"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="#FFC107"

        android:text="@string/descricao"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"

        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="235dp"
        android:layout_height="47dp"

        android:backgroundTint="#FFC107"
        android:drawableLeft="@drawable/baseline_save_24"
        android:text="Salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FF9800"
        tools:layout_editor_absoluteY="549dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Praso"


        android:textSize="28sp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="417dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/cardview_shadow_start_color"
        android:ems="10"
        android:inputType="date"
        android:text="@string/data"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="Nome"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="112dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"

        android:backgroundTint="#FFC107"
        android:drawableTop="@drawable/baseline_person_24"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="323dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Criar serviço"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="465dp"
        android:layout_height="115dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/btn_cadastro_serv"
            android:layout_width="141dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="296dp"
            android:backgroundTint="#FFC107"
            android:drawableTop="@drawable/baseline_save_24"
            android:text="@string/cadastrar_servi_o"
            android:textColorLink="#FFEB3B"
            android:textSize="20sp"
            app:circularflow_radiusInDP="5dp"
            app:cornerRadius="8dp"
            tools:ignore="MissingConstraints,TextSizeCheck" />

        <Button
            android:id="@+id/btn_ver_pedido"
            android:layout_width="137dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"

            android:layout_marginBottom="296dp"
            android:backgroundTint="#FFC107"

            android:drawableTop="@drawable/baseline_contact_page_24"
            android:text="@string/ver_pedidos"

            android:textSize="20sp"
            app:cornerRadius="5dp"
            tools:ignore="MissingConstraints,VisualLintBounds" />

        <Button
            android:id="@+id/button2"
            android:layout_width="132dp"
            android:layout_height="110dp"
            android:layout_marginBottom="296dp"
            android:backgroundTint="#FFC107"
            android:drawableTop="@drawable/baseline_featured_play_list_24"
            android:radius="8dp"
            android:text="@string/ver_meus_servi_os"
            android:textColorLink="#FFEB3B"
            android:textSize="20sp"
            app:cornerRadius="5dp"
            tools:ignore="MissingConstraints,VisualLintBounds" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>