<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".Principal">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="465dp"
        android:layout_height="115dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/btn_cadastro_serv"
            android:layout_width="141dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="296dp"
            android:backgroundTint="#FF9800"
            android:drawableTop="@drawable/baseline_contact_page_24"
            android:text="@string/cadastrar_servi_o"
            android:textColorLink="#FFEB3B"
            android:textSize="20sp"
            app:circularflow_radiusInDP="5dp"
            app:cornerRadius="8dp"
            tools:ignore="MissingConstraints,TextSizeCheck" />

        <Button
            android:id="@+id/btn_ver_pedido"
            android:layout_width="137dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"

            android:layout_marginBottom="296dp"
            android:backgroundTint="#FF9800"

            android:drawableTop="@drawable/baseline_history_24"
            android:text="@string/Historico"

            android:textSize="20sp"
            app:cornerRadius="5dp"
            tools:ignore="MissingConstraints,VisualLintBounds" />

        <Button
            android:id="@+id/button2"
            android:layout_width="132dp"
            android:layout_height="110dp"
            android:layout_marginBottom="296dp"
            android:backgroundTint="#FF9800"
            android:drawableTop="@drawable/baseline_work_24"
            android:radius="8dp"
            android:text="@string/atual"
            android:textColorLink="#FFEB3B"
            android:textSize="20sp"
            app:cornerRadius="5dp"
            tools:ignore="MissingConstraints,VisualLintBounds" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="399dp"
        android:layout_height="348dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/s" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="439dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/clube_da_luta" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="62dp"
        android:backgroundTint="#FFC107"
        android:drawableTop="@drawable/baseline_person_24"

        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>