<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".Perfil_da_empres">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="62dp"
        android:backgroundTint="#FFC107"
        android:drawableTop="@drawable/baseline_person_24"

        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="465dp"
        android:layout_height="115dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/btn_cadastro_serv"
            android:layout_width="141dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="296dp"
            android:backgroundTint="#FF9800"
            android:drawableTop="@drawable/baseline_save_24"
            android:text="@string/s"
            android:textColorLink="#FFEB3B"
            android:textSize="20sp"
            app:circularflow_radiusInDP="5dp"
            app:cornerRadius="8dp"
            tools:ignore="MissingConstraints,TextSizeCheck" />

        <Button
            android:id="@+id/btn_ver_pedido"
            android:layout_width="137dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"

            android:layout_marginBottom="296dp"
            android:backgroundTint="#FF9800"

            android:drawableTop="@drawable/baseline_contact_page_24"
            android:text="@string/cotribu"

            android:textSize="20sp"
            app:cornerRadius="5dp"
            tools:ignore="MissingConstraints,VisualLintBounds" />

        <Button
            android:id="@+id/button2"
            android:layout_width="132dp"
            android:layout_height="110dp"
            android:layout_marginBottom="296dp"
            android:backgroundTint="#FF9800"
            android:drawableTop="@drawable/baseline_featured_play_list_24"
            android:radius="0dp"
            android:text="@string/ver_meus_servi_os"
            android:textColorLink="#FFEB3B"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            tools:ignore="MissingConstraints,VisualLintBounds" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="550dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nome :"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Endereço:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cidade:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFC107"
            android:text="Alterar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>